--- a/package.json
+++ b/package.json
@@ -17,9 +17,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bluebird": "^3.5.42",
+    "@types/debug": "^4.1.12",
+    "@types/express": "^4.17.21",
+    "@types/module-alias": "^2.0.4",
+    "bluebird": "^3.7.2",
+    "module-alias": "^2.2.3",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "rimraf": "^5.0.5"
+    "bcrypt": "^5.1.1",
+    "colors": "^1.4.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.4.1",
+    "envalid": "^8.0.0",
+    "express": "^4.18.2",
+    "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "morgan": "^1.10.0",
+    "rimraf": "^5.0.5",
+    "winston": "^3.11.0"
   }
 }
