--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
