--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bluebird": "^3.5.42",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
