--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bluebird": "^3.5.42",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "bluebird": "^3.7.2",
