husky pre-commit

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "bluebird": "^3.7.2",
+    "husky": "^9.0.7",
     "module-alias": "^2.2.3",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -44,5 +45,17 @@
     "morgan": "^1.10.0",
     "rimraf": "^5.0.5",
     "winston": "^3.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint — fix",
+      "prettier — write",
+      "git add"
+    ]
   }
 }
