--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "start:n": "node dist/notificationService/bin/www.js",
     "start:u": "node dist/usersService/bin/www.js",
     "start:p": "node dist/proxy/index.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -20,15 +23,27 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bluebird": "^3.5.42",
+    "@types/chai": "^4.3.11",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mocha": "^10.0.6",
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
+    "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.2",
     "bluebird": "^3.7.2",
+    "chai": "^5.0.3",
     "husky": "^9.0.7",
+    "jest": "^29.7.0",
+    "mocha": "^10.2.0",
     "module-alias": "^2.2.3",
     "nodemon": "^3.0.3",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
