--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,3 +48,16 @@ jobs:
             ${{ runner.os }}-pnpm-store-
       - name: Install dependencies
         run: pnpm install
+      - name: Build
+        run: |
+          pnpm build
+      - name: Run Tests
+        run: |
+          pnpm test
+  # - name: Build
+  #   run: |
+  #     # Your build command goes here
+
+  # - name: Run Tests
+  #   run: |
+  #     npm test
