--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@types/bluebird": "^3.5.42",
     "@types/chai": "^4.3.11",
     "@types/debug": "^4.1.12",
+    "@types/email-templates": "^10.0.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.6",
     "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
+    "@types/preview-email": "^3.0.4",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "bluebird": "^3.7.2",
@@ -49,11 +51,13 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "debug": "^4.3.4",
     "dotenv": "^16.4.1",
+    "email-templates": "^11.1.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
@@ -61,6 +65,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
+    "preview-email": "^3.0.19",
     "rimraf": "^5.0.5",
     "winston": "^3.11.0"
   }
