--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "colors": "^1.4.0",
     "debug": "^4.3.4",
     "dotenv": "^16.4.1",
+    "ejs": "^3.1.9",
     "email-templates": "^11.1.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
