--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/debug": "^4.1.12",
     "@types/email-templates": "^10.0.4",
     "@types/express": "^4.17.21",
+    "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.6",
@@ -38,6 +39,7 @@
     "@types/supertest": "^6.0.2",
     "bluebird": "^3.7.2",
     "chai": "^5.0.3",
+    "grpc-tools": "^1.12.4",
     "husky": "^9.0.7",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
@@ -51,6 +53,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.0",
+    "@grpc/proto-loader": "^0.7.10",
     "@sendgrid/mail": "^8.1.0",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
@@ -61,12 +65,14 @@
     "email-templates": "^11.1.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "google-protobuf": "^3.21.2",
     "http-proxy-middleware": "^2.0.6",
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "preview-email": "^3.0.19",
+    "protoc-gen-ts": "^0.8.7",
     "rimraf": "^5.0.5",
     "winston": "^3.11.0"
   }
