--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   }
-  // "include": ["packages/**/*.ts", "test/**/*.ts"],
+  // "include": ["packages/**/*.ts", "grpc/**/*.ts"]
   // "exclude": ["node_modules"]
 }
