--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tadi",
+  "name": "tadi-node-services",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,14 +18,16 @@
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "Joshua Ajagbe",
   "license": "ISC",
   "devDependencies": {
     "@types/amqplib": "^0.10.4",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/bluebird": "^3.5.42",
     "@types/chai": "^4.3.11",
     "@types/debug": "^4.1.12",
+    "@types/ejs": "^3.1.5",
     "@types/email-templates": "^10.0.4",
     "@types/express": "^4.17.21",
     "@types/google-protobuf": "^3.15.12",
@@ -39,7 +41,6 @@
     "@types/supertest": "^6.0.2",
     "bluebird": "^3.7.2",
     "chai": "^5.0.3",
-    "grpc-tools": "^1.12.4",
     "husky": "^9.0.7",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
@@ -57,7 +58,7 @@
     "@grpc/proto-loader": "^0.7.10",
     "@sendgrid/mail": "^8.1.0",
     "amqplib": "^0.10.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "debug": "^4.3.4",
     "dotenv": "^16.4.1",
