--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,22 @@ services:
       - rabbitmq
       - mongodb
 
+  chats:
+    image: codespitter/chat-service:latest
+    ports:
+      - '3004:3004'
+    environment:
+      - ENV="development"
+      - BASE_URL="0.0.0.0:3004"
+      - PORT=":3004"
+      - MONGO_URI=${DB_URI}
+      - USER_SERVICE_API_KEY="kjhagsdkfjhskgdjfhsgkdjfhgaskdjhfasgdkjfhsdgfhjgfkhgdkj- hasdkfjhsd"
+      - USER_SERVICE_BASE_URI="http://users:3001/api/v1/users"
+    depends_on:
+      - rabbitmq
+      - mongodb
+      - users
+
 volumes:
   mongodb_data:
     driver: local
